[project]
name = "webassembly-courses"
version = "0.0.1"
authors = [
  { name="Liviu Alexandru Bobocu", email="liviualexandrubobocu@gmail.com" },
]
description = "Courses for WebAssembly"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"